렌탈카 부분 UI feedback 수정

--- a/app/src/main/res/layout/activity_rental_list.xml
+++ b/app/src/main/res/layout/activity_rental_list.xml
@@ -36,7 +36,7 @@
         android:paddingBottom="8dp"
         android:text="거리순"
         android:textColor="@color/agent_color_1NoOpp"
-        android:textSize="12sp"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,6 +57,7 @@
         android:paddingRight="10dp"
         android:paddingBottom="8dp"
         android:text="필터"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -112,7 +113,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="BMW 5시리즈 520i"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView1_1" />
@@ -125,7 +127,9 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="11dp"
                     android:text="150,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView1_2" />
@@ -172,7 +176,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="벤츠 S 클래스 S 450 4Matic"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView2_1" />
@@ -185,6 +190,7 @@
                     android:layout_marginTop="11dp"
                     android:text="75% 할인"
                     android:textColor="@color/agent_color_red"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView2_2" />
@@ -196,7 +202,9 @@
                     android:layout_marginStart="13dp"
                     android:layout_marginTop="11dp"
                     android:text="65,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/textView2_3"
                     app:layout_constraintTop_toBottomOf="@+id/textView2_2" />
@@ -242,7 +250,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="벤츠 S 클래스 S 450 4Matic"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3_1" />
@@ -255,6 +264,7 @@
                     android:layout_marginTop="11dp"
                     android:text="75% 할인"
                     android:textColor="@color/agent_color_red"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3_2" />
@@ -266,7 +276,9 @@
                     android:layout_marginStart="13dp"
                     android:layout_marginTop="11dp"
                     android:text="65,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/textView3_3"
                     app:layout_constraintTop_toBottomOf="@+id/textView3_2" />
@@ -313,7 +325,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="벤츠 S 클래스 S 450 4Matic"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView4_1" />
@@ -325,6 +338,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="11dp"
                     android:text="75% 할인"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:textColor="@color/agent_color_red"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -337,7 +351,9 @@
                     android:layout_marginStart="13dp"
                     android:layout_marginTop="11dp"
                     android:text="65,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/textView4_3"
                     app:layout_constraintTop_toBottomOf="@+id/textView4_2" />
@@ -383,7 +399,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="벤츠 S 클래스 S 450 4Matic"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView5_1" />
@@ -395,6 +412,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="11dp"
                     android:text="75% 할인"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:textColor="@color/agent_color_red"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -407,7 +425,9 @@
                     android:layout_marginStart="13dp"
                     android:layout_marginTop="11dp"
                     android:text="65,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/textView5_3"
                     app:layout_constraintTop_toBottomOf="@+id/textView5_2" />
@@ -454,7 +474,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="벤츠 S 클래스 S 450 4Matic"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView6_1" />
@@ -466,6 +487,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="11dp"
                     android:text="75% 할인"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:textColor="@color/agent_color_red"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -478,7 +500,9 @@
                     android:layout_marginStart="13dp"
                     android:layout_marginTop="11dp"
                     android:text="65,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/textView6_3"
                     app:layout_constraintTop_toBottomOf="@+id/textView6_2" />
@@ -525,7 +549,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="벤츠 S 클래스 S 450 4Matic"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView7_1" />
@@ -537,6 +562,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="11dp"
                     android:text="75% 할인"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:textColor="@color/agent_color_red"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -549,7 +575,9 @@
                     android:layout_marginStart="13dp"
                     android:layout_marginTop="11dp"
                     android:text="65,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/textView7_3"
                     app:layout_constraintTop_toBottomOf="@+id/textView7_2" />
@@ -596,7 +624,8 @@
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="5sp"
                     android:text="벤츠 S 클래스 S 450 4Matic"
-                    android:textColor="@color/agent_color_1Opp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:textColor="@color/agent_color_1NoOpp"
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView8_1" />
@@ -608,6 +637,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="11dp"
                     android:text="75% 할인"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:textColor="@color/agent_color_red"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -620,7 +650,9 @@
                     android:layout_marginStart="13dp"
                     android:layout_marginTop="11dp"
                     android:text="65,000원"
-                    android:textColor="@color/agent_color_1"
+                    android:fontFamily="@font/nanumsquareextrabold"
+                    android:textColor="@color/agent_color_1NoOpp"
+                    android:background="@drawable/default_background_type_price"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/textView8_3"
                     app:layout_constraintTop_toBottomOf="@+id/textView8_2" />
