--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,7 @@
     <color name="agent_color_1NoOpp">#ff3e3e3e</color> //100% opacity
     <color name="agent_color_1Opp">#993e3e3e</color> //60% opacity
     <color name="agent_color_1_80Opp">#CC3e3e3e</color> //80% opacity
+    <color name="agent_color_1_10Opp">#1A3e3e3e</color> //10% opacity
     <color name="agent_color_red">#ff4d4d</color>
 
 </resources>
