- 홈. Bottom navi에서 위 아래 구분선 수정, 선택시 글짜색도 같이 변경, 선택 시 글자 크기 변경 없음 (현재는 크기가 커지는 걸로 되어있는 걸로 보임).    - 홈. Bottom navi에서 선택되지 않은 경우 컬러 변경.

--- a/app/src/main/res/layout/activity_use_history.xml
+++ b/app/src/main/res/layout/activity_use_history.xml
@@ -93,6 +93,7 @@
 
     <!-- bottom navi -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        style="@style/BottomNavigationView"
         android:id="@+id/useBottomNav"
         android:layout_width="match_parent"
         android:layout_height="64dp"
@@ -104,7 +105,7 @@
         android:background="@drawable/default_background_type_3"
         app:itemBackground="@color/base_background_color"
         app:itemIconTint="@drawable/bottom_section_color"
-        app:itemTextColor="@color/bottom_text_color"
+        app:itemTextColor="@drawable/bottom_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
