--- a/app/src/main/res/layout/activity_my_profile_settings.xml
+++ b/app/src/main/res/layout/activity_my_profile_settings.xml
@@ -340,6 +340,7 @@
     <!-- bottom navi -->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        style="@style/BottomNavigationView"
         android:id="@+id/bottomNav_set"
         android:fontFamily="@font/nanumsquareregular"
         android:layout_width="match_parent"
@@ -352,7 +353,7 @@
         android:background="@drawable/default_background_type_3"
         app:itemBackground="@color/base_background_color"
         app:itemIconTint="@drawable/bottom_section_color"
-        app:itemTextColor="@color/bottom_text_color"
+        app:itemTextColor="@drawable/bottom_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
