--- a/app/src/main/res/layout/rental_list_detail.xml
+++ b/app/src/main/res/layout/rental_list_detail.xml
@@ -866,6 +866,8 @@
                                 android:layout_height="48dp"
                                 android:layout_marginStart="24dp"
                                 android:layout_marginEnd="24dp"
+                                android:paddingLeft="20dp"
+                                android:paddingRight="25dp"
                                 android:background="@drawable/layout_background_3" />
 
                         </LinearLayout>
