--- a/app/src/main/res/layout/rental_list_detail.xml
+++ b/app/src/main/res/layout/rental_list_detail.xml
@@ -857,17 +857,22 @@
                                     android:layout_weight="1"/>
                             </LinearLayout>
 
-                            <Spinner
+                            <TextView
                                 android:id="@+id/rental_spinner"
-                                android:layout_centerHorizontal="true"
                                 android:spinnerMode="dialog"
                                 android:layout_width="match_parent"
                                 android:layout_marginTop="24dp"
                                 android:layout_height="48dp"
                                 android:layout_marginStart="24dp"
                                 android:layout_marginEnd="24dp"
+                                android:text="지점방문"
+                                android:textColor="@color/agent_color_red"
+                                android:textSize="15sp"
+                                android:drawableRight="@drawable/dropdown"
                                 android:paddingLeft="20dp"
                                 android:paddingRight="25dp"
+                                android:paddingTop="15dp"
+                                android:paddingBottom="15dp"
                                 android:background="@drawable/layout_background_3" />
 
                         </LinearLayout>
